chore: add DEVISE_JWT_SECRET_KEY

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,3 +50,6 @@ jobs:
 
       - name: Rodar testes com RSpec
         run: bundle exec rspec
+        env:
+          RAILS_ENV: test
+          DEVISE_JWT_SECRET_KEY: ${{ secrets.DEVISE_JWT_SECRET_KEY }}
