--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,20 @@
 # Omakase Ruby styling for Rails
 inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 
-# Overwrite or add rules to create your own house style
-#
-# # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
-# Layout/SpaceInsideArrayLiteralBrackets:
-#   Enabled: false
+# Regras personalizadas
+Layout/EmptyLinesAroundClassBody:
+  Enabled: true
+
+Layout/EmptyLinesAroundAttributeAccessor:
+  Enabled: true
+
+Layout/EmptyLinesAroundMethodBody:
+  Enabled: true
+
+# Exclui arquivos gerados ou externos
+AllCops:
+  Exclude:
+    - "db/schema.rb"
+    - "node_modules/**/*"
+    - "bin/**/*"
+    - "vendor/**/*"
